--- a/style.css
+++ b/style.css
@@ -209,3 +209,10 @@ i{
         transform: rotateZ(-30deg);
     }
 }
+
+@media only screen and (max-width:500px) {
+    
+    .box-1{
+        width: 90vw;
+    }
+}
